# gremory-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml  requirements.txt
app/: config.py  logger.py  main.py
app/api/: chat.py  user_history.py  users.py
app/configs/: config.py  constants.py
app/schemas/: user_history_schemas.py
app/services/: chat_service.py  user_history_service.py
app/tests/: conftest.py  pytest.ini  test_chat.py  test_user_history_api.py  test_user_history_fixes.py
app/utils/database/: DB.md  DB_CHECK.sql  db_conn.py  db_conn_updated.py
app/utils/database/ORM_models/: DB_CLEANUP.md  orm_tables.py  table_migration_util.py  table_operations.py
libs/common-utils/: pyproject.toml  setup.py
libs/common-utils/src/common_utils/: main_setting.py
libs/common-utils/src/common_utils/database/: db_conn.py
libs/common-utils/src/common_utils/database/tables/: orm_tables.py
libs/common-utils/src/common_utils/logger/: __init__.py
libs/common_utils/database/: db_conn.py
services/api-gateway/: Dockerfile  pyproject.toml  requirements.txt
services/api-gateway-monolith/: Dockerfile  pyproject.toml  requirements.txt
services/api-gateway-monolith/src/api_gateway_monolith/: main.py
services/api-gateway-monolith/src/api_gateway_monolith/routes/: chat.py  user_history.py  users.py
services/api-gateway/src/api_gateway/: main.py
services/api-gateway/src/api_gateway/routes/: chat.py  user_history.py
services/aws-agent/: .env.example  pyproject.toml  requirements.txt
services/aws-agent/src/aws_agent/: __init__.py  main.py
services/aws-agent/src/aws_agent/agents/: base_agent.py  orchestrator.py  prompt_management.py
services/aws-agent/src/aws_agent/agents/specialists/: __init__.py  lambda_agent.py  orchestrator_agent.py  s3_agent.py  sagemaker_agent.py
services/aws-agent/src/aws_agent/graph/: __init__.py  aws_multi_agent_graph.py
services/aws-agent/src/aws_agent/schemas/: __init__.py  request_schemas.py  state_schemas.py
services/aws-agent/src/aws_agent/tools/: __init__.py  all_aws_tools.py  lambda_tools.py  s3_tools.py  sagemaker_tools.py
services/aws-agent/src/aws_agent/utils/: __init__.py  aws_utils.py  model_utils.py
services/chat-inference/: Dockerfile  pyproject.toml  requirements.txt
services/chat-inference/src/chat_inference/: SYSTEM_PROMPT.py  chat.py  chat_service.py  main.py  models.py
services/chat-inference/src/chat_inference/ext_tools_init/: aws_tool_def.py  tool_compile.py  tool_def.py
services/chat-inference/src/chat_inference/routes/: chat.py
services/ext-tools/: Dockerfile  pyproject.toml  requirements.txt
services/ext-tools/src/ext_tools/: main.py  tool_service.py
services/ext-tools/src/ext_tools/routes/: tools.py
services/ext-tools/src/ext_tools/tools/: __init__.py  all_tools.py
services/ext-tools/src/ext_tools/tools/aws_service_create/: lambda_service.py  s3_service.py  sagemaker_service.py
services/ext-tools/src/ext_tools/tools/calculator/: calc.py
services/ext-tools/src/ext_tools/tools/get_weather/: get_weather.py
services/personalization/: Create_DB.sql  Dockerfile  pyproject.toml  requirements.txt  test_personalization_routes.py
services/personalization/src/personalization/: main.py  schema.py
services/personalization/src/personalization/database/: db_conn.py  orm_tables.py
services/personalization/src/personalization/embed_logic/: __init__.py  async_embedding_service.py  embedding_service.py
services/personalization/src/personalization/routes/: personalize_service.py
services/user-history/: Dockerfile  pyproject.toml  requirements.txt
services/user-history/src/user_history/: main.py  user_history_service.py
services/user-profile/: Dockerfile  pyproject.toml  requirements.txt
services/user-profile/src/user_profile/: main.py
services/user-profile/src/user_profile/routes/: users.py
