[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common-utils"
version = "0.1.0"
description = "Shared utilities (logging, DB connectors, config loaders) for all services"
requires-python = ">=3.10"
dependencies = [
  "SQLAlchemy==2.0.41",
  "psycopg2-binary==2.9.10",
  "python-dotenv==1.1.0",
  "redis==6.2.0",
  "orjson==3.10.18",
  "typing-inspection==0.4.1",
  "pydantic==2.11.5",
  "pydantic-settings==2.9.1",
  "typing-extensions==4.14.0"
]

[tool.setuptools.packages.find]
where = ["src"]
