[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-gateway-monolith"
version = "0.1.0"
description = "API Gateway: routes, auth, rate-limit, proxies to downstream services"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.34.3",
  "python-dotenv==1.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
