[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-inference"
version = "0.1.0"
description = "Chat Inference Service: ChatService class and /chat router"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.3",
  "langchain==0.3.25",
  "langchain-core==0.3.63",
  "langchain-openai==0.3.19",
  "langchain-google-genai==2.1.5",
  "langchain-ollama==0.3.3",
  "openai==1.84.0",
  "google-ai-generativelanguage==0.6.18",
  "ollama==0.5.1",
  "tiktoken==0.9.0",
  "common-utils"
  ]

[tool.setuptools.packages.find]
where = ["src"]
