[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "user-profile"
version = "0.1.0"
description = "User profile APIs"
requires-python = ">=3.10"

dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.34.3",
  "SQLAlchemy==2.0.41",
  "psycopg2-binary==2.9.10",
  "pydantic==2.11.5",
  "pydantic-settings==2.9.1",
  "python-dotenv==1.1.0"
  ]

[tool.setuptools.packages.find]
where = ["src"]
